<resources>
    <string name="app_name">Заметки</string>
    <string name="ButtonSaveText">Сохранить</string>
    <string name="ButtonAboutText">О приложении</string>
    <string name="ViewAboutTitle">О приложении</string>
    <string name="ButtonShareText">Поделиться</string>
    <string name="AboutText">Приложение "Заметки". Стажировка BSC. Мелешин Евгений</string>
    <string name="EditHeaderText">Введите заголовок</string>
    <string name="EditContentText">Введите текст заметки</string>
    <string name="toastSaveFiled">Ошибка сохранения</string>
    <string name="toastSaveSuccess">Заметка сохранена</string>
    <string name="toastHeaderIsEmpty">Заголовок не заполнен</string>
    <string name="toastContentIsEmpty">Текст заметки не заполнен</string>
    <string name="text_fragmentListOfNotes">Список заметок</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textItemListOfNotes">Заголовок</string>
    <string name="res_infoNoteHeader">Заголовок</string>
    <string name="res_infoNoteDate">Дата</string>
    <string name="res_infoNoteContent">Заметка</string>
    <string name="infoNoteLabelHeader">Заголовок:</string>
    <string name="infoNoteLabelDate">Дата:</string>
    <string name="infoNoteLabelContent">Заметка:</string>
    <string name="labelListNotes">Список заметок</string>
    <string name="text_fragmentInfoNote">Детали заметки</string>
    <string name="headerViewPagerActivity">Заметки</string>
    <string name="toolbar_title">Заметки</string>
    <string name="imageButtonDescription">Кнопка</string>
</resources>