<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/second_bg"
    tools:context=".note.NoteFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="710dp"
            android:layout_marginTop="@dimen/margin_top_12dp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="@dimen/padding_10dp"
            android:paddingEnd="@dimen/padding_10dp"
            android:text="@string/res_infoNoteContent"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_30dp"
            android:layout_marginTop="@dimen/margin_top_4dp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="@dimen/padding_10dp"
            android:paddingEnd="@dimen/padding_10dp"
            android:text="@string/res_infoNoteHeader"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_30dp"
            android:layout_marginTop="@dimen/margin_top_40dp"
            android:background="@drawable/edit_text_style"
            android:paddingStart="@dimen/padding_10dp"
            android:paddingEnd="@dimen/padding_10dp"
            android:text="@string/res_infoNoteDate"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>